# vval

./: .gitignore  README.md  __init__.py  __main__.py  packaging.txt  pyproject.toml  q.py  requirements.txt  setup.py  test.py  testing.txt  vval.py
.github/workflows/: pr_checks.yml  pr_tests.yml  publish.yml
src/: __init__.py  validate.py
src/errors/: __init__.py  errors.py
src/validate/value/: __init__.py  validate.py
src/vval.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test.py  test_vval.py
vval/: __init__.py  vval.py
vval.egg-info/: PKG-INFO  SOURCES.txt
